--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:14.04
 MAINTAINER alex dicianu "alex.dicianu@gmail.com"
 RUN apt-get update
 
-RUN apt-get install -y vim curl wget build-essential python-software-properties php5-cli php5-fpm php5-mysql php5-curl php5-gd php5-mcrypt php5-intl php5-imap php5-tidy php-pear
+RUN apt-get install -y vim curl wget build-essential python-software-properties php5-cli php5-fpm php5-mysql php5-curl php5-gd php5-mcrypt php5-intl php5-imap php5-tidy php-pear strace
 
 RUN sed -i "s/;date.timezone =.*/date.timezone = UTC/" /etc/php5/fpm/php.ini
 RUN sed -i "s/;cgi.fix_pathinfo =*/cgi.fix_pathinfo = 0/" /etc/php5/fpm/php.ini
