--- a/nginx/nginx/global.conf
+++ b/nginx/nginx/global.conf
@@ -1,15 +1,36 @@
 server {
         listen          0.0.0.0:80;
-        server_name     _;
+        server_name     gifter.docker;
 
-        root            /var/www/html/website;
-        index           index.html index.htm;
+        root            /var/www/html/gifter.ro;
+        index           index.php;
 
         access_log      /var/log/nginx/default_access.log;
         error_log       /var/log/nginx/default_error.log;
 
+        gzip_static on;
+ 
+        location = /favicon.ico {
+                log_not_found off;
+                access_log off;
+        }
+ 
+        location = /robots.txt {
+                allow all;
+                log_not_found off;
+                access_log off;
+        }
+
+        location / {
+            try_files $uri $uri/ @cleanurl;
+        }
+ 
+        location @cleanurl {
+            rewrite ^/(.*)$ /index.php?q=$1 last;
+        }
+
         location ~ \.php$ {
-                try_files $uri =404;
+                try_files $uri $uri/ @cleanurl;
                 fastcgi_pass unix:/var/run/php5-fpm.sock;
                 fastcgi_index index.php;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
