--- a/varnish/Dockerfile
+++ b/varnish/Dockerfile
@@ -11,6 +11,7 @@ RUN apt-get update -qq && \
 ADD varnish /etc/default/varnish
 ADD default_varnish3.vcl /etc/varnish/default_varnish3.vcl
 
+# @todo find a better way of handling IPs and ports.
 # ENV VARNISH_BACKEND_PORT 8080
 # ENV VARNISH_BACKEND_IP 192.168.59.103
 # ENV VARNISH_PORT 80
