--- a/nginx/nginx/global.conf
+++ b/nginx/nginx/global.conf
@@ -1,8 +1,13 @@
 server {
         listen          0.0.0.0:8080;
-        server_name     gifter.docker;
 
-        root            /var/www/html/gifter.ro;
+        # We don't need the server_name directive.
+        # server_name     gifter.docker;
+
+        # Root directory is currently set as /var/www/html/. We'll se how we can run multiple sites later.
+        # root            /var/www/html/gifter.ro;
+
+        root            /var/www/html;
         index           index.php;
 
         access_log      /var/log/nginx/default_access.log;
