--- a/nginx/nginx/nginx.conf
+++ b/nginx/nginx/nginx.conf
@@ -1,5 +1,5 @@
 user www-data;
-worker_processes 4;
+worker_processes 1;
 pid /run/nginx.pid;
 daemon off;
 
@@ -13,8 +13,8 @@ http {
   types_hash_max_size 2048;
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
-  access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log;
+  # access_log /var/log/nginx/access.log;
+  # error_log /var/log/nginx/error.log;
   gzip on;
   gzip_disable "msie6";
   include /etc/nginx/conf.d/*.conf;
