--- a/nginx/php/php.ini
+++ b/nginx/php/php.ini
@@ -37,7 +37,7 @@ error_reporting = E_ALL & ~E_DEPRECATED
 ignore_repeated_errors = on
 html_errors = off
 display_errors = on
-error_log = /var/log/php-error.log
+error_log = /var/log/nginx/php-error.log
 log_errors = on
 
 ; Drupal Settings from settings.php
