Issue #16: 502 Bad Gateway errors pop up mostly when using POST.

--- a/nginx/php/php-fpm.conf
+++ b/nginx/php/php-fpm.conf
@@ -1,8 +1,8 @@
 [global]
-pid = /run/php-fpm.pid
+; pid = /run/php-fpm.pid
 ; pid = /srv/bindings/0234108a8cf3463390ca0b3dda0b9cf3/run/php-fpm.pid
 error_log = /var/log/nginx/php-fpm-error.log
-daemonize = yes
+; daemonize = yes
 
 [www]
 listen = /var/run/php5-fpm.sock
