Issue #16: Added volume container for files due to osx permissions problem

--- a/nginx/php/php-fpm.conf
+++ b/nginx/php/php-fpm.conf
@@ -6,12 +6,16 @@ error_log = /var/log/nginx/php-fpm-error.log
 
 [www]
 listen = /var/run/php5-fpm.sock
+; listen = 127.0.0.1:7777
 
 user = www-data
 group = www-data
 
 listen.owner = www-data
 listen.group = www-data
+
+# could be dangerous
+# listen.mode = 0660
 
 pm = dynamic
 pm.max_children = 4
