--- a/nginx/nginx/global.conf
+++ b/nginx/nginx/global.conf
@@ -14,7 +14,9 @@ server {
         error_log       /var/log/nginx/nginx_error.log;
 
         gzip_static on;
- 
+        
+        client_max_body_size 100M;
+         
         location = /favicon.ico {
                 log_not_found off;
                 access_log off;
@@ -36,7 +38,10 @@ server {
 
         location ~ \.php$ {
                 try_files $uri $uri/ @cleanurl;
+                
                 fastcgi_pass unix:/var/run/php5-fpm.sock;
+                # fastcgi_pass 127.0.0.1:7777;
+                
                 fastcgi_index index.php;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 include fastcgi_params;
