--- a/nginx/php/php.ini
+++ b/nginx/php/php.ini
@@ -59,12 +59,12 @@ session.save_handler = user
 
 ; OPCache Configuration
 zend_extension = opcache.so
-opcache.memory_consumption=256
-opcache.interned_strings_buffer=8
-opcache.max_accelerated_files=4000
-opcache.revalidate_freq=60
-opcache.fast_shutdown=1
-opcache.enable=1
+#opcache.memory_consumption=256
+#opcache.interned_strings_buffer=8
+#opcache.max_accelerated_files=4000
+#opcache.revalidate_freq=60
+#opcache.fast_shutdown=1
+opcache.enable=0
 
 ; APCu Configuration
 ; No need for APC. PHP 5.5 uses OPCache.
