--- a/fig.yml
+++ b/fig.yml
@@ -5,8 +5,8 @@ nginx:
   ports:
    - "8080:8080"
   volumes:
-   #- /Users/dicix/work/www/proiecte/gifter.ro:/var/www/html
-   - /Users/dicix/work/pantheon/drupal7:/var/www/html
+   - /Users/dicix/work/www/proiecte/gifter.ro:/var/www/html
+   #- /Users/dicix/work/pantheon/drupal7:/var/www/html
    #- /Users/dicix/work/www/proiecte/drupal:/var/www/html
   volumes_from:
    - filesdata
