--- a/nginx/nginx/nginx.conf
+++ b/nginx/nginx/nginx.conf
@@ -3,19 +3,28 @@ worker_processes 1;
 pid /run/nginx.pid;
 daemon off;
 
-events {  }
+events {
+    worker_connections 128;
+}
 
 http {
   sendfile on;
   tcp_nopush on;
   tcp_nodelay on;
-  keepalive_timeout 65;
+  keepalive_timeout 70;
   types_hash_max_size 2048;
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
+  
   # access_log /var/log/nginx/access.log;
   # error_log /var/log/nginx/error.log;
+
   gzip on;
   gzip_disable "msie6";
+
+  # Do we need these?
+  proxy_read_timeout 900s;
+  fastcgi_read_timeout 900s;
+
   include /etc/nginx/conf.d/*.conf;
 }
