--- a/varnish/Dockerfile
+++ b/varnish/Dockerfile
@@ -12,9 +12,9 @@ ADD varnish /etc/default/varnish
 ADD default_varnish3.vcl /etc/varnish/default_varnish3.vcl
 
 # @todo find a better way of handling IPs and ports.
-# ENV VARNISH_BACKEND_PORT 8080
-# ENV VARNISH_BACKEND_IP 192.168.59.103
-# ENV VARNISH_PORT 80
+ENV VARNISH_BACKEND_PORT 8080
+ENV VARNISH_BACKEND_IP 192.168.59.103
+ENV VARNISH_PORT 80
 
 # Expose port 80
 EXPOSE 80
