--- a/nginx/nginx/sites/drupal8.conf
+++ b/nginx/nginx/sites/drupal8.conf
@@ -1,13 +1,8 @@
 server {
         listen          0.0.0.0:8080;
 
-        # We don't need the server_name directive.
-        # server_name     gifter.docker;
-
-        # Root directory is currently set as /var/www/html/. We'll se how we can run multiple sites later.
-        # root            /var/www/html/gifter.ro;
-
-        root            /var/www/html;
+        server_name     drupal8;
+        root            /var/www/html/drupal8;
         index           index.php;
 
         access_log      /var/log/nginx/nginx_access.log;
