--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -29,7 +29,8 @@ ADD php/php-fpm.conf /etc/php5/fpm/pool.d/www.conf
 # nginx
 RUN apt-get -y -q install nginx
 RUN mkdir -p /var/www/html
-ADD nginx/global.conf /etc/nginx/conf.d/
+
+ADD nginx/sites/ /etc/nginx/conf.d/
 ADD nginx/nginx.conf /etc/nginx/nginx.conf
 
 # run.sh
