Added redis credentials as env variables

--- a/nginx/php/php-fpm.conf
+++ b/nginx/php/php-fpm.conf
@@ -46,3 +46,6 @@ request_slowlog_timeout = 5s
 
 ; Set root
 chdir = /var/www/html/
+
+env[CACHE_HOST] = REDIS_CACHE_HOST
+env[CACHE_PORT] = REDIS_CACHE_PORT
