--- a/fig.yml
+++ b/fig.yml
@@ -10,6 +10,13 @@ nginx:
    - /Users/dicix/work/pantheon/wordpress:/var/www/html/wordpress
   volumes_from:
    - filesdata
+  environment:
+    # Set environment variables for Redis, the same way pantheon does.
+    CACHE_HOST: 192.168.59.103
+    CACHE_PORT: 6379
+    # For some reason, this doesn't get picked up by php-fpm and we need to specify it in php-fpm.conf (http://l33t.peopleperhour.com/2014/03/13/setting-environment-variables-in-php-fpm-when-using-docker-links/)
+    REDIS_CACHE_HOST: 192.168.59.103
+    REDIS_CACHE_PORT: 6379
 
 filesdata:
   build: filesdata
@@ -33,3 +40,7 @@ varnish:
   build: varnish
   ports:
    - "80:80"
+  environment:
+    VARNISH_BACKEND_PORT: 8080
+    VARNISH_BACKEND_IP: 192.168.59.103
+    VARNISH_PORT: 80
