--- a/fig.yml
+++ b/fig.yml
@@ -4,10 +4,11 @@ nginx:
   # image: dicix/nginx
   ports:
    - "8080:8080"
-  volumes:
-   - /Users/dicix/work/www/proiecte/gifter.ro:/var/www/html/gifter.ro
-   - /Users/dicix/work/pantheon/drupal8:/var/www/html/drupal8
-   - /Users/dicix/work/pantheon/wordpress:/var/www/html/wordpress
+  # Volumes mounted this way use the virtualbox vboxsf filesystem. This is extremely slow for sites with 1000+ of files (just like drupal)
+  #volumes:
+  # - /Users/dicix/work/www/proiecte/gifter.ro:/var/www/html/gifter.ro
+  # - /Users/dicix/work/pantheon/drupal8:/var/www/html/drupal8
+  # - /Users/dicix/work/pantheon/wordpress:/var/www/html/wordpress
   volumes_from:
    - filesdata
   environment:
