--- a/nginx/nginx/sites/drupal7.conf
+++ b/nginx/nginx/sites/drupal7.conf
@@ -1,8 +1,8 @@
 server {
         listen          0.0.0.0:8080;
 
-        server_name     gifter.docker;
-        root            /var/www/html/gifter.ro;
+        server_name     drupal7;
+        root            /var/www/html/drupal7;
         index           index.php;
 
         access_log      /var/log/nginx/nginx_access.log;
