--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ nginx:
   # Command "image" can be used if we wish to use the dicix/nginx docker repo. For local repo, we use build.
   # image: dicix/nginx
   ports:
-   - "80805:80805"
+   - "55555:55555"
   # Volumes mounted this way use the virtualbox vboxsf filesystem. This is extremely slow for sites with 1000+ of files (just like drupal)
   volumes:
    - /Users/dicix/work/pantheon/drupal8:/var/www/html/drupal8
@@ -14,10 +14,10 @@ nginx:
    - filesdata
   environment:
     # Set environment variables for Redis, the same way pantheon does.
-    CACHE_HOST: 192.168.59.103
+    CACHE_HOST: __REDIS_HOST__
     CACHE_PORT: 6379
     # For some reason, this doesn't get picked up by php-fpm and we need to specify it in php-fpm.conf (http://l33t.peopleperhour.com/2014/03/13/setting-environment-variables-in-php-fpm-when-using-docker-links/)
-    REDIS_CACHE_HOST: 192.168.59.103
+    REDIS_CACHE_HOST: __REDIS_HOST__
     REDIS_CACHE_PORT: 6379
 
 filesdata:
@@ -43,6 +43,6 @@ varnish:
   ports:
    - "80:80"
   environment:
-    VARNISH_BACKEND_PORT: 80805
-    VARNISH_BACKEND_IP: 192.168.59.103
+    VARNISH_BACKEND_PORT: 55555
+    VARNISH_BACKEND_IP: __NGINX_HOST__
     VARNISH_PORT: 80
