--- a/circle.yml
+++ b/circle.yml
@@ -5,5 +5,6 @@ test:
   pre: 
     - sudo pip install requests==2.5.3 
     - sudo pip install docker-compose 
+    - bundle install
   override:
     - docker-compose up -d 
