/var/www/html instead of /var/www/data - ./argos script uses a regex for adding new sites in there

--- a/filesdata/Dockerfile
+++ b/filesdata/Dockerfile
@@ -3,6 +3,6 @@ MAINTAINER Pantheon Systems
 
 RUN yum -y update && yum clean all
 
-VOLUME /var/www/data
+VOLUME /var/www/html/default
 
 CMD ["/bin/bash"]
