--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,9 @@
-nginx:
+web1:
   build: nginx
-  # Command "image" can be used if we wish to use the dicix/nginx docker repo. For local repo, we use build.
-  # image: dicix/nginx
   ports:
-   - "55555:55555"
-  # Volumes mounted this way use the virtualbox vboxsf filesystem. This is extremely slow for sites with 1000+ of files (just like drupal)
+   - "55555"
   volumes:
-   - /Users/dicix/work/pantheon/drupal8:/var/www/html/drupal8
-   - /Users/dicix/work/pantheon/drupal7:/var/www/html/drupal7
-   - /Users/dicix/work/pantheon/wordpress:/var/www/html/wordpress
-   - /Users/dicix/work/pantheon/drupaltest/:/var/www/html/drupaltest
+   - /Users/dicix/work/pantheon/drupal7-test:/var/www/html/drupal7test
   volumes_from:
    - filesdata
   environment:
@@ -19,6 +13,30 @@ nginx:
     # For some reason, this doesn't get picked up by php-fpm and we need to specify it in php-fpm.conf (http://l33t.peopleperhour.com/2014/03/13/setting-environment-variables-in-php-fpm-when-using-docker-links/)
     REDIS_CACHE_HOST: __REDIS_HOST__
     REDIS_CACHE_PORT: 6379
+
+web2:
+  build: nginx
+  ports:
+   - "55555"
+  volumes:
+   - /Users/dicix/work/pantheon/drupal7-test:/var/www/html/drupal7test
+  volumes_from:
+   - filesdata
+  environment:
+    # Set environment variables for Redis, the same way pantheon does.
+    CACHE_HOST: __REDIS_HOST__
+    CACHE_PORT: 6379
+    # For some reason, this doesn't get picked up by php-fpm and we need to specify it in php-fpm.conf (http://l33t.peopleperhour.com/2014/03/13/setting-environment-variables-in-php-fpm-when-using-docker-links/)
+    REDIS_CACHE_HOST: __REDIS_HOST__
+    REDIS_CACHE_PORT: 6379
+
+varnish:
+  build: varnish
+  ports:
+   - "80:80"
+  links:
+    - web1:web1
+    - web2:web2
 
 filesdata:
   build: filesdata
@@ -37,12 +55,3 @@ redis:
   build: redis
   ports:
    - "6379:6379"
-
-varnish:
-  build: varnish
-  ports:
-   - "80:80"
-  environment:
-    VARNISH_BACKEND_PORT: 55555
-    VARNISH_BACKEND_IP: __NGINX_HOST__
-    VARNISH_PORT: 80
