--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ varnish:
    - web2:web2
   environment:
     VARNISH_PORT: 80
-    VARNISH_MULTINODE: "off"
+    VARNISH_MULTINODE: "on"
 
 web1:
   build: nginx
