Issue #27: added general paths to yml templates

--- a/docker-compose-multinode.yml
+++ b/docker-compose-multinode.yml
@@ -14,7 +14,7 @@ web1:
   ports:
    - "55555"
   volumes:
-   - /Users/dicix/work/pantheon/drupal7-test:/var/www/html/drupal7test
+   - /Users/myuser/work/pantheon/site:/var/www/html/site
   volumes_from:
    - filesdata
   environment:
@@ -30,7 +30,7 @@ web2:
   ports:
    - "55555"
   volumes:
-   - /Users/dicix/work/pantheon/drupal7-test:/var/www/html/drupal7test
+   - /Users/myuser/work/pantheon/site:/var/www/html/site
   volumes_from:
    - filesdata
   environment:
