--- a/nginx/php/php.ini
+++ b/nginx/php/php.ini
@@ -22,7 +22,7 @@ date.timezone = "UTC"
 mail.add_x_header = On
 
 ;;;;;;;;;;;;;;;;;;;;;;;
-;; PANTHEON SETTINGS ;;
+;; ARGOS SETTINGS ;;
 ;;;;;;;;;;;;;;;;;;;;;;;
 
 ; Globals
