Renaming references to Argos

--- a/nginx/nginx/sites/wordpress.conf
+++ b/nginx/nginx/sites/wordpress.conf
@@ -22,7 +22,7 @@ server {
           return 403;
         }
 
-        # Try site errors, then pantheon errors
+        # Try site errors, then Argos errors
         location ~ ^/(504|403|502|php_in_valhalla|locked|maintenance|styx_ssl_error)\.html$ {
           add_header Cache-Control max-age=5;
           try_files $uri /error_pages/$uri;
@@ -91,7 +91,7 @@ server {
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 include fastcgi_params;
 
-                # Pantheon extra conf
+                # Argos extra conf
                 fastcgi_intercept_errors on;
                 # Set the REMOTE_ADDR as the client IP so as to not confuse drupal.
                 # x-pantheon-client-ip comes from styx but will be missing
