--- a/nginx/nginx/sites/wordpress.conf
+++ b/nginx/nginx/sites/wordpress.conf
@@ -12,7 +12,7 @@ server {
         
         client_max_body_size 100M;
 
-        # Original formula Drupal code protection as per .htaccess
+        # Original formula code protection as per .htaccess
         location ~ \.(engine|inc|info|install|make|module|profile|test|po|sh|.*sql|theme|tpl(\.php)?|xtmpl)$|^(\..*|Entries.*|Repository|Root|Tag|Template)$ {
           return 403;
         }
