Renaming references to Argos

--- a/nginx/nginx/sites/drupal7.conf
+++ b/nginx/nginx/sites/drupal7.conf
@@ -34,14 +34,14 @@ server {
           return 403;
         }
 
-        # Try site errors, then pantheon errors
+        # Try site errors, then Argos errors
         location ~ ^/(504|403|502|php_in_valhalla|locked|maintenance|styx_ssl_error)\.html$ {
           add_header Cache-Control max-age=5;
           try_files $uri /error_pages/$uri;
         }
 
         location ~ /sites/default/files/.*\.php$ {
-          error_page 403 /php_in_valhalla.html;
+          error_page 403 /php_in_valhalla.html; # @TODO
           return 403;
         }
 
