--- a/app/php/php-fpm.conf
+++ b/app/php/php-fpm.conf
@@ -5,11 +5,11 @@ error_log = /var/log/nginx/php-fpm-error.log
 [www]
 listen = /var/run/php5-fpm.sock 
 
-user = www-data
-group = www-data
+user = nginx
+group = nginx
 
-listen.owner = www-data
-listen.group = www-data
+listen.owner = nginx
+listen.group = nginx
 
 # could be dangerous
 # listen.mode = 0660
