--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -8,18 +8,18 @@ RUN yum -y install nginx && yum clean all
 #RUN echo "nginx on Fedora" > /usr/share/nginx/html/index.html
 
 #RUN yum -y update && yum clean all
-RUN yum -y install nginx php php-cgi php-fpm php-cli php-mysql php-curl php-gd php-mcrypt php-intl php-imap php-tidy php-pear strace php-common && yum clean all
+RUN yum -y install nginx php php-cgi php-fpm php-cli php-mysql php-curl php-gd php-mcrypt php-intl php-imap php-tidy php-pear php-common php-mbstring && yum clean all
 
 # RUN echo "daemon off;" >> /etc/nginx/nginx.conf
 # RUN echo "nginx on Fedora" > /usr/share/nginx/html/index.html
 
 # Install composer.
-#RUN curl -sS https://getcomposer.org/installer | php
-#RUN mv composer.phar /usr/local/bin/composer
-#RUN ln -s /usr/local/bin/composer /usr/bin/composer
+# RUN curl -sS https://getcomposer.org/installer | php
+# RUN mv composer.phar /usr/local/bin/composer
+# RUN ln -s /usr/local/bin/composer /usr/bin/composer
 
 # nginx 
-#RUN mkdir -p /var/www/html
+RUN mkdir -p /var/www/html
 
 # PHP (adding Pantheon php.ini and php-fpm.conf to the mix)
 COPY php/php.ini /etc/php5/fpm/php.ini
