--- a/app/php/php-fpm.conf
+++ b/app/php/php-fpm.conf
@@ -3,12 +3,13 @@ error_log = /var/log/nginx/php-fpm-error.log
 ; daemonize = yes
 
 [www]
-listen = /var/run/php5-fpm.sock 
+# listen = /var/run/php5-fpm.sock 
+listen = 127.0.0.1:9000
 
-user = nginx
+user = apache
 group = nginx
 
-listen.owner = nginx
+listen.owner = apache
 listen.group = nginx
 
 # could be dangerous
@@ -23,7 +24,7 @@ pm.max_requests = 100
 
 ; Additional Configs
 
-; This is really verbose, and we don't need it
+# This is really verbose, and we don't need it
 catch_workers_output = no
 
 ; Status handler (protected by nginx)
