--- a/filesdata/Dockerfile
+++ b/filesdata/Dockerfile
@@ -4,5 +4,6 @@ MAINTAINER Pantheon Systems
 RUN yum -y update && yum clean all
 
 VOLUME /var/www/html/default
+VOLUME /var/www/html/drupal7/sites/default/files
 
 CMD ["/bin/bash"]
