--- a/docker-compose-multinode.yml
+++ b/docker-compose-multinode.yml
@@ -3,8 +3,8 @@ varnish:
   ports:
    - "80:80"
   links:
-   - app1:app1
-   - app2:app2
+   - app1
+   - app2
   environment:
     VARNISH_PORT: 80
     VARNISH_MULTINODE: "on"
